# mal_scraping

./: README.md  pyproject.toml
scraper/backend_mal/animes/: admin.py  admin_filters.py  models.py  serializers.py  serializers_mini.py  tests.py  urls.py  views.py
scraper/backend_mal/broadcasts/: admin.py  models.py  serializers.py  serializers_mini.py  urls.py  views.py
scraper/backend_mal/config/: settings_test.py  test_runner.py  urls.py
scraper/backend_mal/demos/: admin.py  models.py  serializers.py  serializers_mini.py  urls.py  views.py
scraper/backend_mal/genres/: admin.py  models.py  serializers.py  urls.py  views.py
scraper/backend_mal/hists/: admin.py  apps.py  models.py
scraper/backend_mal/mylists/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
scraper/backend_mal/reviews/: models.py
scraper/backend_mal/seasons/: admin.py  models.py  tests.py  urls.py  views.py
scraper/backend_mal/sources/: admin.py  models.py  serializers.py  serializers_mini.py  urls.py  views.py
scraper/backend_mal/studios/: admin.py  models.py  serializers.py  serializers_mini.py  urls.py  views.py
scraper/backend_mal/themes/: admin.py  models.py  serializers.py  serializers_mini.py  urls.py  views.py
scraper/backend_mal/users/: admin.py  models.py  serializers.py  urls.py  views.py
scraper/frontend_mal/: package-lock.json  package.json
scraper/frontend_mal/src/: App.js  api.js  index.jsx  router.jsx
scraper/frontend_mal/src/api/: filter.js  (+3 more)
scraper/seasonal_anime/collector/: run.py
scraper/seasonal_anime/collector_2023_spring/: run.py
(+82 files in other folders)
