[tool.poetry]
name = "mal-scraping"
version = "0.1.0"
description = ""
authors = ["crosswalk <crosswalk0628@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mal_scraping"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
black = "^23.1.0"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
django-environ = "^0.10.0"
pyjwt = "^2.6.0"
plotly = "^5.14.1"
sqlalchemy = "1.4.22"
pandas = "^2.0.0"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
